# GenCPP

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_and_deploy.bat  gen2_launcher.nsi
.claude/: settings.local.json
include/: BackupManager.h  CommandLineHandler.h  Config.h  CulParser.h  CulTableModel.h  DetailCdeParser.h  DssatProParser.h  EcoParser.h  EcoTableModel.h  GlueQueueDialog.h  GlueQueueManager.h  GlueQueuePanel.h  GlueRunner.h  GlueWizard.h  MainWindow.h  SingleInstanceApp.h  SpeEditor.h  SpeGraphWidget.h  SpeSyntaxHighlighter.h  version_generated.h  version_generated.h.in
manual_deployment/resources/: final.icns  version.rc
src/: BackupManager.cpp  CommandLineHandler.cpp  CulParser.cpp  CulTableModel.cpp  DetailCdeParser.cpp  DssatProParser.cpp  EcoParser.cpp  EcoTableModel.cpp  GlueQueueDialog.cpp  GlueQueueManager.cpp  GlueQueuePanel.cpp  GlueRunner.cpp  GlueWizard.cpp  MainWindow.cpp  SingleInstanceApp.cpp  SpeEditor.cpp  SpeGraphWidget.cpp  SpeSyntaxHighlighter.cpp  main.cpp
